[package]
name = "keymaster"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
dioxus = "0.3.2"
dioxus-desktop = { version = "0.3.0", features = ["tray"] }
dirs = "5.0.1"
eyre = "0.6.8"
pgp = { version = "0.10.1", features = ["wasm"] }
sequoia-ipc = "0.30.1"
sequoia-openpgp = "1.14.0"
shellexpand = "3.1.0"
